--- a/services/mail-service/pom.xml
+++ b/services/mail-service/pom.xml
@@ -14,12 +14,14 @@
 	<packaging>war</packaging>
 	<name>mail-service</name>
 	<description>Demo project for Spring Boot</description>
-    <properties>
-        <java.version>17</java.version>
-        <spring-cloud.version>2022.0.4</spring-cloud.version>
-        <daprSpringBoot.version>0.11.0-SNAPSHOT</daprSpringBoot.version>
-        <testcontainers-dapr.version>0.10.14</testcontainers-dapr.version>
-    </properties>
+	<properties>
+		<java.version>17</java.version>
+		<spring-cloud.version>2022.0.4</spring-cloud.version>
+		<daprSpringBoot.version>0.11.0-SNAPSHOT</daprSpringBoot.version>
+		<testcontainers-dapr.version>0.10.14</testcontainers-dapr.version>
+		<maven.compiler.source>20</maven.compiler.source>
+		<maven.compiler.target>20</maven.compiler.target>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
