--- a/services/mail-service/pom.xml
+++ b/services/mail-service/pom.xml
@@ -19,8 +19,6 @@
 		<spring-cloud.version>2022.0.4</spring-cloud.version>
 		<daprSpringBoot.version>0.11.0-SNAPSHOT</daprSpringBoot.version>
 		<testcontainers-dapr.version>0.10.14</testcontainers-dapr.version>
-		<maven.compiler.source>20</maven.compiler.source>
-		<maven.compiler.target>20</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -31,13 +29,21 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/io.diagrid.dapr/spring-boot-starter-dapr -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>io.diagrid.dapr</groupId>
 			<artifactId>spring-boot-starter-dapr</artifactId>
 			<version>0.10.0</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/io.diagrid.dapr/testcontainers-dapr -->
 		<dependency>
 			<groupId>io.diagrid.dapr</groupId>
@@ -91,10 +97,6 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mail</artifactId>
-		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -114,7 +116,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-		<finalName>mail-server</finalName>
+		<finalName>mail-service</finalName>
 	</build>
 
 </project>
